@@ -1,3 +1,13 @@
+2006-04-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * configure: Regen.
+        * configure.in:
+        * src/pkgIndex.tcl:
+        * src/jacl/tcl/lang/Interp.java:
+        * src/tcljava/tcl/lang/BlendExtension.java:
+        * unix/tools/vutil/current:
+        * win/makefile.vc: Update version to 1.4.0.
+
 2006-04-26  Mo DeJong  <mdejong@users.sourceforge.net>
 
         * docs/contents.html: Add new Jacl and
